# From-Keldysh-to-Levy-Unified-EM-Noise-Framework-for-Trapped-Ions

./: .gitignore  .latexmkrc  Makefile  README.md  discriminants_table.tex  em_mediation_diagram.tex  inference_protocol.tex  introduction.tex  latexmkrc  main.tex  pyproject.toml  refs.bib  scattering_formulas.tex  spatial_coherence.tex  theory_sections.tex  trajectory_coherence_diagram.tex
.github/workflows/: ci.yml  latex.yml
bib/: refs.bib
figures/: em_mediation_diagram.tex  trajectory_coherence_diagram.tex
notebooks/: 01_ME_demo.ipynb
scripts/: check_claims.sh
sections/: 01_introduction.tex  02_regimes_overview.tex  03_theory_foundations.tex  04_scattering_models.tex  05_em_mediation.tex  06_model_assumptions.tex  06_spatial_temporal_coherence.tex  07_inference_protocol.tex  08_discriminants_table.tex  09_uncertainties_validation.tex  10_conclusion_outlook.tex
tests/: test_gaussian_limit.py
tex/: preamble_validation.tex
unified_noise/: __init__.py  analytics.py  operators.py  params.py  solver_me.py
